--- a/meccsek.html
+++ b/meccsek.html
@@ -132,12 +132,29 @@
             transition: 0.3s; position: relative;
         }
 
-        @keyframes goal-flash {
-            0% { background-color: rgba(255, 62, 62, 0.8) !important; box-shadow: 0 0 20px rgba(255, 62, 62, 0.6); }
-            50% { background-color: rgba(30, 41, 59, 0.4) !important; box-shadow: none; }
-            100% { background-color: rgba(255, 62, 62, 0.8) !important; box-shadow: 0 0 20px rgba(255, 62, 62, 0.6); }
-        }
-        .goal-highlight { animation: goal-flash 0.6s ease-in-out infinite !important; border: 2px solid var(--neon-red) !important; transform: scale(1.02); z-index: 10; }
+       @keyframes goal-flash {
+    0% { 
+        background-color: rgba(255, 62, 62, 0.9) !important; 
+        box-shadow: 0 0 40px rgba(255, 62, 62, 0.8);
+        transform: scale(1.02);
+    }
+    50% { 
+        background-color: rgba(30, 41, 59, 0.4) !important; 
+        box-shadow: none;
+        transform: scale(1);
+    }
+    100% { 
+        background-color: rgba(255, 62, 62, 0.9) !important; 
+        box-shadow: 0 0 40px rgba(255, 62, 62, 0.8);
+        transform: scale(1.02);
+    }
+}
+
+.goal-highlight { 
+    animation: goal-flash 0.5s ease-in-out infinite !important; 
+    z-index: 100;
+    border-color: #ff3e3e !important;
+}
 
         #goal-banner {
             position: fixed; top: -100px; left: 50%; transform: translateX(-50%);
@@ -184,7 +201,7 @@
 <body class="dark">
 
     <div id="goal-banner">GOOOAAAL!!!</div>
-    <audio id="goal-sound" src="https://www.myinstants.com/media/sounds/soccer-goal-sound-effect.mp3"></audio>
+    <audio id="goal-sound" src="https://www.soundjay.com/buttons/sounds/button-37a.mp3"></audio>
 
     <div class="bg-animation">
         <div class="blob blob-1"></div>
@@ -509,6 +526,7 @@
     </script>
 </body>
 </html>
+
 
 
 
