--- a/meccsek.html
+++ b/meccsek.html
@@ -220,11 +220,10 @@
 
     <div class="main-wrapper">
         <aside class="sidebar" id="sidebar-leagues">
-            <<div style="padding: 0 15px 10px 15px;">
+            <div style="padding: 0 15px 10px 15px;">
     <button class="tool-btn" style="width: 100%;" onclick="selectAllLeagues()" id="select-all-btn">
         MIND KIJELÖL
-    </button>
-</div>
+    </button></div>
 <div id="league-list"></div>
         </aside>
 
@@ -593,6 +592,7 @@ function updateSelectAllButton() {
     </script>
 </body>
 </html>
+
 
 
 
