--- a/meccsek.html
+++ b/meccsek.html
@@ -206,7 +206,7 @@
 
     <div class="main-wrapper">
         <aside class="sidebar" id="sidebar-leagues">
-            <div style="padding: 0 15px 30px 15px;">
+            <div style="padding: 15px 15px 15px 15px;">
     <button class="tool-btn" style="width: 100%;" onclick="selectAllLeagues()" id="select-all-btn">
         MIND KIJELÖL
     </button></div>
@@ -602,6 +602,7 @@ function updateSelectAllButton() {
     </script>
 </body>
 </html>
+
 
 
 
