--- a/meccsek.html
+++ b/meccsek.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>LuckyPitch | Live Match Universe</title>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
-    <style>
+  <style>
     :root {
         --bg: #020617;
         --glass: rgba(15, 23, 42, 0.85);
@@ -14,35 +14,28 @@
         --neon-red: #ff3e3e;
         --text: #f1f5f9;
         --border: rgba(255, 255, 255, 0.1);
-        --cl-gs: #0044ff; --el-gs: #cc7a00; --ecl-q: #00cc6a; --po: #d35400; --rel: #ff3e3e;
+        --cl-gs: #0044ff;
     }
 
-    body.light {
-        --bg: #f8fafc;
-        --glass: rgba(255, 255, 255, 0.9);
-        --text: #0f172a;
-        --border: rgba(0, 0, 0, 0.1);
-        --neon-blue: #0284c7;
-    }
-
-    * { margin: 0; padding: 0; box-sizing: border-box; -webkit-tap-highlight-color: transparent; }
-    
+    /* --- ALAP BEÁLLÍTÁSOK --- */
     body { 
-        background: var(--bg);
+        background: var(--bg); 
         color: var(--text); 
         font-family: 'Inter', sans-serif; 
-        height: 100vh; 
-        overflow: hidden;
-        position: relative;
+        margin: 0; 
+        padding: 0;
+        min-height: 100vh;
+        overflow-x: hidden;
     }
 
-    /* --- LÁVALÁMPA ANIMÁCIÓ --- */
+    /* --- LÁVALÁMPA (Z-index fixálva) --- */
     .bg-animation {
         position: fixed; top: 0; left: 0; width: 100%; height: 100%;
         z-index: -1; overflow: hidden; filter: blur(80px); opacity: 0.4;
+        pointer-events: none;
     }
     .blob {
-        position: absolute; width: 500px; height: 500px; border-radius: 50%;
+        position: absolute; width: 400px; height: 400px; border-radius: 50%;
         animation: move 20s infinite alternate;
     }
     .blob-1 { background: var(--cl-gs); top: -10%; left: -10%; animation-duration: 25s; }
@@ -51,155 +44,92 @@
     
     @keyframes move {
         0% { transform: translate(0, 0) scale(1); }
-        100% { transform: translate(200px, 100px) scale(1.2); }
+        100% { transform: translate(150px, 50px) scale(1.2); }
     }
 
-    /* --- NAV --- */
+    /* --- NAVIGÁCIÓ & TICKER --- */
     nav { 
-        position: fixed; top: 0; left: 0; right: 0; height: 75px; 
+        position: fixed; top: 0; left: 0; right: 0; height: 65px; 
         display: flex; justify-content: space-between; align-items: center; 
-        padding: 0 30px; background: var(--glass); backdrop-filter: blur(20px); 
+        padding: 0 20px; background: var(--glass); backdrop-filter: blur(20px); 
         border-bottom: 1px solid var(--border); z-index: 1000; 
     }
-    .logo { font-family: 'Orbitron'; font-weight: 900; font-size: 1.4rem; color: var(--neon-blue); letter-spacing: 3px; }
+    .logo { font-family: 'Orbitron'; font-weight: 900; font-size: 1.2rem; color: var(--neon-blue); letter-spacing: 2px; }
 
-    .nav-tools { display: flex; gap: 12px; align-items: center; }
-    .tool-btn { 
-        background: rgba(255,255,255,0.05); border: 1px solid var(--border);
-        color: var(--text); padding: 8px 15px; border-radius: 12px;
-        cursor: pointer; font-family: 'Orbitron'; font-size: 10px; transition: 0.3s;
-    }
-    .tool-btn:hover { border-color: var(--neon-blue); transform: translateY(-2px); }
+    .ticker-wrap { background: rgba(0, 0, 0, 0.6); border-bottom: 1px solid var(--neon-blue); padding: 8px 0; overflow: hidden; margin-top: 65px; }
+    .ticker { display: flex; animation: ticker-scroll 30s linear infinite; white-space: nowrap; }
+    .ticker-item { margin-right: 40px; font-size: 10px; font-family: 'Orbitron'; color: var(--neon-blue); }
+    @keyframes ticker-scroll { 0% { transform: translateX(100%); } 100% { transform: translateX(-100%); } }
 
-    /* --- LAYOUT --- */
-    .main-wrapper { display: flex; height: 100vh; padding-top: 75px; }
-
-    .sidebar, .standings-sidebar {
-        background: var(--glass); backdrop-filter: blur(25px);
-        overflow-y: auto; border: 1px solid var(--border);
-        transition: transform 0.4s cubic-bezier(0.4, 0, 0.2, 1);
-    }
-    .sidebar { width: 300px; border-right: 1px solid var(--border); }
-    .standings-sidebar { width: 420px; border-left: 1px solid var(--border); padding: 20px; }
-
-    .sidebar-header { 
-        padding: 20px; font-family: 'Orbitron'; font-size: 11px; 
-        color: var(--neon-blue); letter-spacing: 2px; text-transform: uppercase;
-        border-bottom: 1px solid var(--border);
+    /* --- LAYOUT STRUKTÚRA --- */
+    .main-wrapper { 
+        display: flex; 
+        flex-direction: column; 
+        padding: 15px;
+        gap: 20px;
     }
 
-    /* --- DATE STRIP --- */
-    .date-strip { display: flex; gap: 12px; margin-bottom: 25px; overflow-x: auto; padding-bottom: 5px; scrollbar-width: none; }
-    .date-pill { flex: 0 0 auto; padding: 12px 22px; border-radius: 14px; background: rgba(255,255,255,0.03); border: 1px solid var(--border); cursor: pointer; font-family: 'Orbitron'; font-size: 10px; transition: 0.3s; }
-    .date-pill.active { border-color: var(--neon-green); color: var(--neon-green); background: rgba(0, 255, 136, 0.05); }
+    @media (min-width: 1100px) {
+        .main-wrapper { 
+            flex-direction: row; 
+            padding-top: 20px;
+        }
+        .sidebar { width: 300px; }
+        .content-area { flex: 1; }
+        .standings-sidebar { width: 400px; }
+    }
 
-    /* --- MATCH CARDS & GOAL EFFECT --- */
-    .content-area { flex: 1; overflow-y: auto; padding: 25px; scrollbar-width: none; }
+    /* --- KÁRTYÁK ÉS PAN ELEK --- */
+    .glass-panel { 
+        background: var(--glass); border: 1px solid var(--border); 
+        padding: 20px; border-radius: 24px; backdrop-filter: blur(15px); 
+    }
+
     .match-card {
         background: rgba(30, 41, 59, 0.4); border: 1px solid var(--border); border-radius: 24px;
         padding: 20px; margin-bottom: 15px; display: flex; align-items: center;
         transition: 0.3s; position: relative;
     }
 
-    /* --- GÓL VILLOGÁS (Javítva: az egész kártyára) --- */
+    /* --- GÓL EFFEKTUSOK (Változatlanul hagytam) --- */
     @keyframes goal-flash {
         0% { background: rgba(255, 62, 62, 1); transform: scale(1.02); }
         50% { background: rgba(255, 62, 62, 0.4); transform: scale(1); }
         100% { background: rgba(255, 62, 62, 1); transform: scale(1.02); }
     }
-
-    .match-card.goal-highlight, 
-    .match-card.goal-highlight div, 
-    .match-card.goal-highlight span {
-        animation: goal-flash 0.5s ease-in-out infinite !important;
-        color: white !important;
-        border-color: white !important;
-        background-color: transparent; /* Hogy ne takarják el a kártya villogását */
-    }
-
     .match-card.goal-highlight {
-        z-index: 100;
-        box-shadow: 0 0 50px rgba(255, 62, 62, 0.8);
+        animation: goal-flash 0.5s ease-in-out infinite !important;
+        z-index: 100; box-shadow: 0 0 50px rgba(255, 62, 62, 0.8);
     }
-
     #goal-banner {
         position: fixed; top: -100px; left: 50%; transform: translateX(-50%);
         background: linear-gradient(90deg, var(--neon-green), var(--neon-blue));
         color: #000; padding: 15px 40px; border-radius: 0 0 20px 20px;
         font-family: 'Orbitron'; font-weight: 900; z-index: 2000;
         transition: 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-        box-shadow: 0 10px 30px rgba(0,0,0,0.5);
     }
     #goal-banner.show { top: 0; }
 
-    /* --- CSAPAT LOGÓK --- */
-    .team-link { flex: 1; display: flex; flex-direction: column; align-items: center; gap: 8px; cursor: pointer; z-index: 5; }
-    .team-link img { width: 55px; height: 55px; object-fit: contain; transition: 0.4s; filter: drop-shadow(0 0 0px transparent); }
-    .team-link:hover img { transform: scale(1.15) rotate(8deg); filter: drop-shadow(0 0 8px var(--neon-blue)); }
-    .team-link span { font-weight: 700; font-family: 'Orbitron'; font-size: 12px; text-align: center; }
+    /* --- RESPONSIVE TÁBLÁZATOK --- */
+    .table-responsive { 
+        width: 100%; overflow-x: auto; 
+        -webkit-overflow-scrolling: touch; 
+    }
+    table { width: 100%; min-width: 500px; border-collapse: separate; border-spacing: 0 5px; }
 
-    .score-display { font-family: 'Orbitron'; font-size: 2rem; font-weight: 900; color: var(--neon-green); text-shadow: 0 0 15px rgba(0,255,136,0.3); width: 130px; text-align: center; }
-    .score-live { color: var(--neon-red); text-shadow: 0 0 15px var(--neon-red); }
+    /* --- FORMÁZÁS --- */
+    .score-display { 
+        font-family: 'Orbitron'; font-size: 1.8rem; font-weight: 900; 
+        color: var(--neon-green); text-align: center; min-width: 80px; 
+    }
+    .date-strip { display: flex; gap: 12px; overflow-x: auto; scrollbar-width: none; padding-bottom: 10px; }
+    .date-pill { flex: 0 0 auto; padding: 12px 20px; border-radius: 14px; background: rgba(255,255,255,0.03); border: 1px solid var(--border); font-family: 'Orbitron'; font-size: 10px; cursor: pointer; }
 
-    /* --- TABELLA --- */
-    .standings-table { width: 100%; border-collapse: separate; border-spacing: 0 6px; }
-    .standings-table td { padding: 12px 8px; background: rgba(255,255,255,0.03); text-align: center; border-top: 1px solid var(--border); border-bottom: 1px solid var(--border); font-size: 12px; }
-    .pos-col { border-left-width: 5px !important; border-left-style: solid !important; }
-    .pos-num-box { width: 28px; height: 28px; line-height: 28px; margin: 0 auto; border-radius: 6px; font-weight: bold; font-family: 'Orbitron'; font-size: 11px; }
-    .zone-tag { font-size: 7px; font-family: 'Orbitron'; display: block; margin-bottom: 3px; font-weight: 900; text-transform: uppercase; }
-/* --- NAVIGATION --- */
-        .back-btn {
-            display: inline-flex; align-items: center; gap: 8px;
-            text-decoration: none; color: var(--neon-blue); font-family: 'Orbitron'; font-size: 10px;
-            padding: 8px 15px; background: rgba(14, 165, 233, 0.1); border: 1px solid var(--neon-blue);
-            border-radius: 50px; margin-bottom: 15px; font-weight: bold;
-        }
-
-        .ticker-wrap { background: rgba(0, 0, 0, 0.6); border-bottom: 1px solid var(--neon-blue); padding: 8px 0; overflow: hidden; margin-bottom: 20px; }
-        .ticker { display: flex; animation: ticker-scroll 30s linear infinite; white-space: nowrap; }
-        .ticker-item { margin-right: 40px; font-size: 10px; font-family: 'Orbitron'; color: var(--neon-blue); }
-        @keyframes ticker-scroll { 0% { transform: translateX(100%); } 100% { transform: translateX(-100%); } }
-        /* --- HERO CARD (MOBILE FIXED) --- */
-        .hero-card {
-            background: var(--glass); backdrop-filter: blur(20px); border-radius: 20px; border: 1px solid var(--border);
-            padding: 25px 15px; display: flex; justify-content: space-between; align-items: center;
-            margin-bottom: 20px; gap: 10px;
-        }
-        .score-display { font-family: 'Orbitron'; font-size: 1.8rem; font-weight: 900; color: var(--neon-green); flex-shrink: 0; text-align: center; min-width: 80px; }
-        .team-box { flex: 1; text-align: center; }
-        .team-box img { width: 45px; height: 45px; object-fit: contain; margin-bottom: 8px; }
-        .team-box h2 { font-family: 'Orbitron'; font-size: 0.85rem; margin: 0; line-height: 1.2; }
-
-        /* --- GRID LAYOUT --- */
-        .grid-layout { display: flex; flex-direction: column; gap: 20px; }
-        @media (min-width: 1100px) { .grid-layout { display: grid; grid-template-columns: 2fr 1fr; } }
-
-        .glass-panel { background: var(--glass); border: 1px solid var(--border); padding: 20px; border-radius: 24px; backdrop-filter: blur(15px); }
-    /* --- LEAGUE ITEMS --- */
-    .league-item { margin: 8px 15px; padding: 12px 15px; border-radius: 14px; display: flex; align-items: center; gap: 12px; cursor: pointer; transition: 0.3s; border: 1px solid transparent; background: rgba(255,255,255,0.02); }
-    .league-item.active { background: rgba(0, 255, 136, 0.1); border-color: var(--neon-green); }
-/* --- TABLES (SCROLLABLE ON MOBILE) --- */
-        .table-responsive { width: 100%; overflow-x: auto; -webkit-overflow-scrolling: touch; margin-top: 15px; }
-        table { width: 100%; border-collapse: separate; border-spacing: 0 5px; min-width: 600px; } /* Min szélesség, hogy ne nyomódjon össze */
-        th { font-family: 'Orbitron'; font-size: 9px; color: #64748b; padding: 5px; text-align: center; }
-        td { padding: 10px 5px; background: rgba(255,255,255,0.03); text-align: center; font-size: 12px; }
-
-        .pos-num-box { width: 24px; height: 24px; line-height: 24px; margin: 0 auto; border-radius: 4px; font-weight: bold; font-family: 'Orbitron'; font-size: 10px; }
-        .zone-tag { font-size: 7px; font-family: 'Orbitron'; display: block; margin-bottom: 2px; }
-        /* --- ODDS --- */
-        .market-table { min-width: 100%; }
-        .market-table td { font-size: 11px; }
-        .odd-val { color: var(--neon-green); font-weight: bold; background: rgba(0,255,136,0.1); padding: 4px 6px; border-radius: 4px; border: 1px solid rgba(0,255,136,0.2); }
-
-        .momentum-wrap { height: 8px; background: rgba(0,0,0,0.5); border-radius: 10px; margin: 15px 0; overflow: hidden; }
-        .momentum-fill { height: 100%; width: 0%; background: linear-gradient(90deg, var(--neon-blue), var(--neon-green)); transition: 1s ease; }
-
-        .chart-container { position: relative; height: 180px; }
-
-        @media (max-width: 600px) {
-            .score-display { font-size: 1.4rem; min-width: 60px; }
-            .team-box h2 { font-size: 0.75rem; }
-            .glass-panel { padding: 15px; }
+    @media (max-width: 600px) {
+        .score-display { font-size: 1.3rem; min-width: 60px; }
+        .match-card { padding: 15px 10px; }
+        .logo { font-size: 1rem; }
+    }
 </style>
 </head>
 <body class="dark">
@@ -623,6 +553,7 @@ function updateSelectAllButton() {
     </script>
 </body>
 </html>
+
 
 
 
